--- a/tp3.tex
+++ b/tp3.tex
@@ -684,8 +684,8 @@ Considerar un sistema LTI, causal, caracterizado por una ecuación en diferencia
   \item \fs{} Verificar $y_{[n]}$ para la respuesta al escalón unitario por división directa hasta la quinta muestra y
     reconstruir $Y_{(z)} = \mathcal{Z}\{y_{[n]}\}$.
 
-    El metodo de división directa consiste en realizar sucesivas divisiones de polinomios convenientes con el objetivo de obtener
-    una expresion de la forma tal que se encutren los valores x[n] por analogía con la definición de la transformada Z
+    El método de división directa consiste en realizar sucesivas divisiones de polinomios convenientes con el objetivo de obtener
+    una expresión de la forma tal que se encuentren los valores x[n] por analogía con la definición de la transformada Z
 
     $$X_{[z]}=\sum_{n=0}^{\infty} x_{[n]} z^{-n}$$
 
