--- a/tp3.tex
+++ b/tp3.tex
@@ -727,34 +727,317 @@ Considerar la siguiente secuencia periódica en tiempo discreto y aplicar la Ser
 Considerar un sistema LTI, causal, caracterizado por una ecuación en diferencias:
 
 \[
-y[n] - 1.2 y[n-1] - 0.13 y[n-2] - 0.36 y[n-3] = x[n]
+  y_{[n]} - 1.2 y_{[n-1]} - 0.13 y_{[n-2]} - 0.36 y_{[n-3]} = x_{[n]}
 \]
 
 \begin{enumerate}[label=\alph*), left=0pt]
-  \item Determinar $Y(z) = \mathcal{Z}\{y[n]\}$, la solución completa, con las siguientes condiciones iniciales:
+  \item Determinar $Y(z) = \mathcal{Z}\{y_{[n]}\}$, la solución completa, con las siguientes condiciones iniciales:
 
     \[
-    y[-1] = 1, \quad y[-2] = -1, \quad y[-3] = 1
+      y_{[-1]} = 1, \quad y_{[-2]} = -1, \quad y_{[-3]} = 1
     \]
+
+    Despejando $y_{[n]}$:
+    $$y_{[n]} = x_{[n]} + 1.2 y_{[n-1]} + 0.13 y_{[n-2]} + 0.36 y_{[n-3]} $$
+    Y aplicando las propiedades de linealidad y desplazamiento temporal de la transformada Z:
+
+    \begin{align*}
+      Y_{(z)} &= X_{(z)} + 1.2 ( Y_{[z]} z^{-1} + y_{[-1]} ) + 0.13 ( Y_{[z]} z^{-2} + y_{[-1]} z^{-1} + y_{[-2]} ) +\\
+           &\hspace{20mm} 0.36 (Y_{[z]}z^{-3} + y_{[-1]}z^{-2} +y_{[-2]} z^{-1} + y_{[-3]})\\
+      Y_{(z)} &= X_{(z)} + 1.2 ( Y_{[z]}z^{-1} + 1) + 0.13 ( Y_{[z]}z^{-2} + z^{-1} - 1) + 0.36 (Y_{[z]}z^{-3} + z^{-2} - z^{-1} + 1)\\
+      Y_{(z)} &= X_{(z)} + 1.2 Y_{[z]}z^{-1}  + 0.13 Y_{[z]}z^{-2} + 1.43 + 0.36Y_{[z]}z^{-3} + 0.36z^{-2} - 0.23 z^{-1} \\
+    \end{align*}
+    \begin{align*}
+      Y_{(z)} - 0.36Y_{[z]}z^{-3} - 0.13 Y_{[z]}z^{-2} - 1.2 Y_{[z]}z^{-1} &= X_{(z)} + 1.43 + 0.36z^{-2} - 0.23 z^{-1}\\
+      Y_{(z)} (1 - 0.36z^{-3} - 0.13 z^{-2} - 1.2 z^{-1}) &= X_{(z)} + z^{-3} + 1.43 + 0.36z^{-2} - 0.23 z^{-1}\\
+      Y_{(z)}  &= \frac{X_{(z)} + 1.43 + z^{-3} + 0.36z^{-2} - 0.23 z^{-1}}{(1 - 0.36z^{-3} - 0.13 z^{-2} - 1.2 z^{-1})}\\
+    \end{align*}
 
   \item \fs{} Obtener la función de transferencia $H(z)$, respuesta al impulso con condiciones iniciales nulas, por
     medio de residuos.
 
-  \item \fs{} Obtener $h[n] = \mathcal{Z}^{-1}\{H(z)\}$.
+    Teniendo en cuenta CI nulas para la expresión previamente obtenida de $Y_{[z]}$
+
+    $$Y_{(z)} = X_{(z)} + 1.2 Y_{[z]} z^{-1} + 0.13 Y_{[z]} + 0.36 Y_{[z]}z^{-3}$$
+    $$Y_{(z)} (1 - 1.2 z^{-1} - 0.13 - 0.36 z^{-3}) = X_{(z)}$$
+    $$H_{(z)} = \frac{1}{1 - 1.2 z^{-1} - 0.13z^{-2} - 0.36 z^{-3}}$$
+    $$H_{(z)} = \frac{z^3}{z^3 - 1.2 z^{2} - 0.13z - 0.36}$$
+
+    Factorizando el denominador:
+    $$H_{(z)} = \frac{z^3}{(z-1.4584) (z+(0.1292+j0.4797)) (z+(0.1292-j0.4797))}$$
+
+  \item \fs{} Obtener $h_{[n]} = \mathcal{Z}^{-1}\{H_{(z)}\}$
+
+    Planteamos la antitransformada cómo:
+    $$\mathcal{Z}^{-1}\{H_{(z)}\}=h_{[n]}=\frac{1}{2\pi j}\oint_C H_{(z)} z^{n-1}dz$$
+
+    Podemos resolver esta integral a través del teorema del residuo siendo:
+    $$\oint_C H_{(z)} z^{n-1}dz = 2\pi j\sum_{i=1}^n Res(H_{(z)} z^{n-1},z_i)$$
+    siendo $n$ el numero de polos y $z_i$ el polo i-esimo.
+
+    Identificamos los polos:
+    \begin{align*}
+      z_1&=1.4584\\
+      z_2&=-0.1292-j0.4797\\
+      z_3&=-0.1292+j0.4797
+    \end{align*}
+
+    Calculamos los residuos:
+    \begin{align*}
+      Res(H_{(z)} z^{n-1},z_1) &= \lim_{z \to z_1}\frac{(z-z_1)z^{n+2}}{(z-z_1) (z-z_2) (z-z_3)}\\
+      Res(H_{(z)} z^{n-1},z_1) &= \frac{{z_1}^{n+2}}{ (z_1-z_2) (z_1-z_3)}\\
+      Res(H_{(z)} z^{n-1},z_1) &= \frac{1.4584^{n+2}}{2,7596}
+    \end{align*}
+
+    \begin{align*}
+      Res(H_{(z)} z^{n-1},z_2) &= \lim_{z \to z_2}\frac{(z-z_2)z^{n+2}}{(z-z_1) (z-z_2) (z-z_3)}\\
+      Res(H_{(z)} z^{n-1},z_2) &= \frac{{z_2}^{n+2}}{ (z_2-z_1) (z_2-z_3)}\\
+      Res(H_{(z)} z^{n-1},z_2) &= \frac{(-0.1292-j0.4797)^{n+2}}{(-0.4602+j1.5231)}
+    \end{align*}
+
+    \begin{align*}
+      Res(H_{(z)} z^{n-1},z_3) &= \lim_{z \to z_3}\frac{(z-z_3)z^{n+2}}{(z-z_1) (z-z_2) (z-z_3)}\\
+      Res(H_{(z)} z^{n-1},z_3) &= \frac{{z_3}^{n+2}}{ (z_3-z_1) (z_3-z_2)}\\
+      Res(H_{(z)} z^{n-1},z_3) &= \frac{(-0.1292+j0.4797)^{n+2}}{(-0.4602-j1.5231)}
+    \end{align*}
+
+    Como la consigna del ejercicio indica que el sistema es causal, la respuesta al impulso debe ser causal.
+    Siendo entonces:
+    $$h_{[n]}=\left(\frac{1.4584^{n+2}}{2.7596} + \frac{(-0.1292-j0.4797)^{n+2}}{(-0.4602+j1.5231)} +
+    \frac{(-0.1292+j0.4797)^{n+2}}{(-0.4602-j1.5231)}\right)\mu_{[n]}$$
+
+    Si bien este resultado en un principio parece una función compleja, lo cual no seria valido, teniendo en cuenta que:
+    $$(z^*)^n=(z^n)^*$$
+    Podemos afirmar que los numeradores de los dos últimos términos siempre serán complejos conjugados, pudiendo
+    generalizar la expresión cómo:
+    $$\frac{z}{w} + \frac{z^*}{w^*} = \frac{a+jb}{c+jd}+\frac{a-jb}{c-jd} = \frac{2(ac+bd)+j(bc-bc-ad+ad)}{c^2 + d^2}$$
+    Demostrando así que la expresión obtenida de $h_{[n]}$ siempre da un resultado real.
 
   \item \fs{} Obtener la respuesta al escalón unitario con condiciones iniciales nulas, por medio de fracciones 
-    parciales $y[] = \mathcal{Z}^{-1}\{Y(z)\}$.
+    parciales $y_{[n]} = \mathcal{Z}^{-1}\{Y_{(z)}\}$.
 
-  \item \fs{} Obtener $y[n] = \mu[n] * h[n]$, la respuesta al escalón unitario sin condiciones iniciales por medio de la
+    Partiendo de:
+    $$Y_{(z)}  = \frac{X_{(z)}}{(1 - 1.2 z^{-1} - 0.13 - 0.36 z^{-3})}$$
+    Y considerando que la respuesta al escalón unitario es:
+    $$X_{(z)}  = \frac{z}{z-1}$$
+    La expresión final será:
+    $$Y_{(z)}  = \frac{\frac{z}{z-1}}{(1 - 1.2 z^{-1} - 0.13 - 0.36 z^{-3})}$$
+    Multiplicando y dividiendo por $z^3$, y luego resolviendo:
+    \begin{align*}
+      Y_{(z)} &= \frac{z^4}{(z - 1)(z^3 - 1.2 z^2 - 0.13 z - 0.36)}\\
+      Y_{(z)} &= \frac{z^4}{(z - 1)(z - 1.4584)(z + 0.1292 - j0.4797)(z + 0.1291 + j0.4797)}\\
+      Y_{(z)} &= \frac{A}{z - 1} + \frac{B}{z - 1.4584} + \frac{C}{z + 0.1292 - j0.4797} + \frac{D}{z + 0.1291 + j0.4797}
+    \end{align*}
+    Resolviendo los coeficientes obtenemos:
+    \begin{align*}
+      A = -1.4493 \quad
+      B = 3.5878 \quad
+      C = 0.0307 - j0.0056 \quad
+      D = 0.0307 + j0.0056
+    \end{align*}
+    Finalmente reemplazando en la $Y_{(z)}$:
+    \begin{equation*}
+      Y_{(z)} = \frac{-1.4493}{z - 1} + \frac{3.5878}{z - 1.4584} + \frac{0.0307 - j0.0056}{z + (0.1292 + j0.4797)} +
+        \frac{0.0307 + j0.0056}{z + (0.1292 - j0.4797)}\\
+    \end{equation*}
+    Realizando la antitransformada por primitivas, donde:
+    \begin{equation}
+      \mathbb{Z}^{-1} \left\{ \frac{A}{z-a}\right\} = A a^{n-1} \mu_{[n]}
+    \end{equation}
+
+    Tenemos entonces:
+    \begin{align*}
+      y_{[n]} &= \big((-1.4493) + 3.5878 (1.4584)^{n-1} + (0.0307 - j0.0056)(0.1292 + j0.4797)^{n-1} +\\
+              &\hspace{6mm}(0.0307 + j0.0056)(0.1929 - j0.4797)^{n-1} \big) \mu_{[n]}
+    \end{align*}
+
+    %\begin{align*}
+    %  y_{(n)} =& \delta_{(n)} + \Big((-1.4493 - 0.020j) \cdot (-1)^n + (3.5878 + 0.037j) \cdot (1.4584)^n \cdot (-1)^n +\\[2pt]
+    %           &(0.030 - 0.005j) \cdot (0.5123)^n \cdot e^{-j1.274n} + (0.034 + 0.006j) \cdot (0.5123)^n \cdot 
+    %            e^{-j1.274n} \Big) \cdot u_{(n)}\\
+    %    y_{[n]} =& \delta_{[n]} + \Big((-1)^n ((-1.4993 - 0.020j) + (3.5878 + 0.037j) \cdot (1.4584)^n) +\\[2pt]
+    %             &(0.5123)^n \cdot e^{-j1.274n} (0.0640 + 0.0010j)\Big) \cdot u_{(n)}
+    %\end{align*}
+
+  \item \fs{} Obtener $y_{[n]} = \mu_{[n]} * h_{[n]}$, la respuesta al escalón unitario sin condiciones iniciales por medio de la
     convolución temporal.
+    \begin{align*}
+      y_{[n]} &= \sum_{k=-\infty}^{\infty}
+      \left(\frac{1.4584^{k+2}}{2.7596} + \frac{(-0.1292-j0.4797)^{k+2}}{(-0.4602+j1.5231)} +
+      \frac{(-0.1292+j0.4797)^{k+2}}{(-0.4602-j1.5231)}\right)\mu_{[k]} \mu_{[n-k]}\\
+      %
+      y_{[n]} &= \sum_{k=0}^{n}
+      \frac{1.4584^{k+2}}{2.7596} + \frac{(-0.1292-j0.4797)^{k+2}}{(-0.4602+j1.5231)} +
+      \frac{(-0.1292+j0.4797)^{k+2}}{(-0.4602-j1.5231)}\\
+      %
+      y_{[n]} &= 
+      \sum_{k=0}^{n} \frac{1.4584^{k+2}}{2.7596} +
+      \sum_{k=0}^{n} \frac{(-0.1292-j0.4797)^{k+2}}{(-0.4602+j1.5231)} +
+      \sum_{k=0}^{n} \frac{(-0.1292+j0.4797)^{k+2}}{(-0.4602-j1.5231)}
+    \end{align*}
 
-  \item \fs{} Verificar $y[n]$ para la respuesta al escalón unitario por división directa hasta la quinta muestra y
-    reconstruir $Y(z) = \mathcal{Z}\{y[n]\}$.
+    Resolviendo cada sumatoria por separado:
+
+    \begin{align*}
+      \sum_{k=0}^{n} \frac{1.4584^{k+2}}{2.7596} =& \frac{1.4584^2}{2.7596} \sum_{k=0}^{n} 1.4584^k\\
+      =& 0.7707 \frac{1-1.4584^{n+1}}{1-1.4584}\\
+      =& \frac{0.7707 }{1-1.4584}(1-1.4584^{n+1})\\
+      =& -1.6812(1-1.4584^{n+1})
+    \end{align*}
+
+    \begin{align*}
+      \sum_{k=0}^{n} \frac{(-0.1292-j0.4797)^{k+2}}{(-0.4602+j1.5231)}=&
+      \frac{(-0.1292-j0.4797)^2}{(-0.4602+j1.5231)} \sum_{k=0}^{n}(-0.1292-j0.4797)^k\\
+      %
+      =& (0.1134+j0.1059) \frac{1-(-0.1292-j0.4797)^{n+1}}{1-(-0.1292-j0.4797)}\\
+      %
+      =& \frac{(0.1134+j0.1059)}{1-(-0.1292-j0.4797))} (1-(-0.1292-j0.4797)^{n+1})\\
+      %
+      =&  0.1188+j0.0433 (1-(-0.1292-j0.4797)^{n+1})
+    \end{align*}
+
+    \begin{align*}
+      \sum_{k=0}^{n} \frac{(-0.1292+j0.4797)^{k+2}}{(-0.4602-j1.5231)}=&
+      \frac{(-0.1292+j0.4797)^2}{(-0.4602-j1.5231)} \sum_{k=0}^{n}(-0.1292+j0.4797)^k\\
+      %
+      =& (-0.2867+j0.2679) \frac{1-(-0.1292+j0.4797)^{n+1}}{1-(-0.1292+j0.4797)}\\
+      %
+      =& \frac{(-0.2867+j0.2679)}{1-(-0.1292+j0.4797)} (1 - (-0.1292+j0.4797)^{n+1})\\
+      %
+      =& -0.3004+j0.1096 (1 - (-0.1292+j0.4797)^{n+1})
+    \end{align*}
+
+    Finalmente:
+    $$y_{[n]} = -1.6812 (1-1.4584^{n+1} + 0.1188+j0.0433 (1-(-0.1292-j0.4797)^{n+1}$$
+    $$- 0.3004+j0.1096 (1 - (-0.1292+j0.4797)^{n+1})$$
+
+  \item \fs{} Verificar $y_{[n]}$ para la respuesta al escalón unitario por división directa hasta la quinta muestra y
+    reconstruir $Y_{(z)} = \mathcal{Z}\{y_{[n]}\}$.
+
+    El método de división directa consiste en realizar sucesivas divisiones de polinomios convenientes con el objetivo de obtener
+    una expresión de la forma tal que se encuentren los valores x[n] por analogía con la definición de la transformada Z
+
+    $$X_{[z]}=\sum_{n=0}^{\infty} x_{[n]} z^{-n}$$
+
+    Partimos de la expresión:
+
+    $$Y_{(z)} = \frac{z}{(z-1)(1 - 1.2 z^{-1} - 0.13 - 0.36 z^{-3})}$$
+    $$Y_{(z)} = \frac{z^4}{z^4 - 2.2 z^3 + 1.07 z^2 - 0.23 z + 0.36}$$
+
+    Dividimos considerando un cociente $\frac{z^4}{z^4}=1$
+
+    $$Y_{(z)} = 1 + \frac{ 2.2 z^3 - 1.07 z^2 - 0.23 z - 0.36}{z^4 - 2.2 z^3 + 1.07 z^2 - 0.23z + 0.36}$$
+
+    Dividimos considerando un cociente $\frac{-2.2z^3}{z^4}=2.2z^{-1}$
+
+    $$Y_{(z)} = 1 + 2.2z^{-1} + \frac{ 3.77 z^2 - 2.117 z - 0.146 z - 0.792 z^{-1}}{z^4 - 2.2 z^3 + 1.07 z^2 - 0.23z + 0.36}$$
+
+    Dividimos considerando un cociente $\frac{3.77z^2}{z^4}=3.77z^{-2}$
+
+    $$Y_{(z)} = 1 + 2.2z^{-1} + 3.77z^{-2} \frac{ 6.17 z - 3.88 + 0.078 z^{-1} - 1.357 z^{-2}}{z^4 - 2.2 z^3 + 1.07 z^2 - 0.23z + 0.36}$$
+
+    Dividimos considerando un cociente $\frac{6.17z^3}{z^4}=6.17z^{-3}$
+
+    $$Y_{(z)} = 1 + 2.2z^{-1} + 3.77z^{-2} + 6.17z^{-3} + \frac{ 9.77 z - 6.52z^{-1} + 0.062 z^{-2} - 2.221 z^{-3}}{z^4 - 2.2 z^3 + 1.07 z^2 - 0.23z + 0.36}$$
+
+    Dividimos considerando un cociente $\frac{9.77}{z^4}=9.77z^{-4}$
+
+    $$Y_{(z)} = 1 + 2.2z^{-1} + 3.77z^{-2} + 6.17z^{-3} + 9.77z^{-4} + ...$$
+
+    Obtenemos así por analogía los valores de $y_{[n]}$
+    $$y_{[0]}=1,\hspace{1cm} y_{[1]}=2.2,\hspace{1cm} y_{[2]}=3.77,\hspace{1cm} y_{[3]}=6.17,\hspace{1cm} y_{[4]}=9.77$$
 
   \item \fs{} Verificar el régimen transitorio (TVI) y el régimen de estado permanente (TVF) en ambos dominios 
     $\{z, n\}$ para la respuesta al escalón unitario con condiciones iniciales nulas.
 
+    El teorema del valor inicial indica que:
+    \begin{equation}
+      \lim_{z \to \infty} Y_{[z]} = y_{[0]}
+    \end{equation}
+
+    Aplicando el teorema a la respuesta del escalón unitario en $z$:
+    \begin{align*}
+      y_{[0]} &= \lim_{z \to \infty} Y(z)\\
+      y_{[0]} &= \lim_{z \to \infty} \frac{z^4}{(z - 1)(z^3 - 1.2 z^2 - 0.13 z - 0.36)}\\
+      y_{[0]} &= \lim_{z \to \infty} \frac{z^4}{z^4 - 2.2 z^3 + 1.07 z^2 - 0.23 z + 0.36}\\
+      y_{[0]} &= \frac{\infty^4}{\infty^4 - 2.2 \infty^3 + 1.07 \infty^2 - 0.23 \infty + 0.36}\\
+      y_{[0]} &= 1
+    \end{align*}
+    
+    Valuando la función $y_{[n]}$ da un numero muy próximo a 1. Suponemos que el error esta dado por el truncamiento de
+    los decimales después de la coma.
+
+    El teorema del valor final indica que:
+    \begin{equation}
+      \lim_{z \to 1} (1 - z^{-1}) Y_{[z]} = y_{[\infty]}
+    \end{equation}
+
+    Aplicando el teorema a la respuesta del escalón unitario en $z$:
+    \begin{align*}
+      y_{[\infty]} &= \lim_{z \to 1} (1 - z^{-1}) Y(z)\\
+      y_{[\infty]} &= \lim_{z \to 1} \frac{(1 - z^{-1}) z^4}{z^4 - 2.2 z^3 + 1.07 z^2 - 0.23 z + 0.36}
+    \end{align*}
+
+    Una indeterminación del tipo $\frac{0}{0}$ que requiere reacomodar los términos para salvar la indeterminación:
+    \begin{align*}
+      y_{[\infty]} &= \lim_{z \to 1} \frac{(z - 1) z^3}{(z - 1)(z^3 - 1.2 z^2 - 0.13 z - 0.36)}\\
+      y_{[\infty]} &= \lim_{z \to 1} \frac{z^3}{z^3 - 1.2 z^2 - 0.13 z - 0.36}\\
+      y_{[\infty]} &= -\frac{100}{69}
+    \end{align*}
+
+    Lo cual no coincide con lo que da la función en $\infty$, la cual diverge por los números elevados a n.
+
   \item \fs{} Elaborar la síntesis del sistema por medio de diagrama de bloques con retardos unitarios.
+
+    \begin{center}
+
+      \begin{tikzpicture}[auto, node distance=2cm, >=Stealth, thick]
+        % Definición de estilos para los bloques y sumador
+        \tikzstyle{block} = [draw, rectangle, minimum height=1.5em, minimum width=3em]
+        \tikzstyle{sum} = [draw, circle, inner sep=1pt, minimum size=1cm, node distance=2cm]
+        \tikzstyle{connector} = [draw, fill, circle, minimum size=4pt, inner sep=0pt] % Estilo para el punto de conexión
+       % Nodes
+       \node at (0,0) [coordinate] (input) {}; % Input
+       \node [coordinate, on grid,right=7cm of input] (elbowInput1) {}; % Elbow connection for input
+       \node [sum, on grid,below=1.5cm of elbowInput1] (sum1) {$\sum$}; % Sum node
+       \node [coordinate, on grid,right=3cm of sum1] (output) {}; % Output coordinate
+       \node [block,on grid,left=2cm of sum1] (differentiator1) {$D$}; % First delay block (D)
+       \node [sum, on grid,left=2cm of differentiator1] (sum2) {$\sum$}; % Sum node
+       \node [block,on grid,left=2cm of sum2] (differentiator2) {$D$}; % Second delay block (D)
+       \node [sum, on grid,left=2cm of differentiator2] (sum3) {$\sum$}; % Sum node
+       \node [block,on grid,left=2cm of sum3] (differentiator3) {$D$}; % Third delay block (D)
+       \node [block,on grid,below=1.5cm of sum2] (gain1) {$1.2$}; % Gain block for 1.2
+       \node [block,on grid,below=1.5cm of sum3] (gain2) {$0.13$}; % Gain block for 0.13
+       \node [block,on grid,below=1.5cm of differentiator3, xshift=-1.6cm] (gain3) {$0.36$}; % Gain block for 0.36
+       \node [connector,on grid,right=1cm of sum1] (c0) {};
+       \node [connector,on grid,below=1cm of gain1] (c1) {};
+       \node [connector,on grid,below=1cm of gain2] (c2) {};
+       \node [coordinate, on grid,below=1cm of gain3] (elbowOutput2) {}; % Elbow connection for input
+       \node [coordinate, on grid,below=2.5cm of c0] (elbowOutput1) {}; % Elbow connection for input
+       % Connections
+       \draw[-] (input) -- node{$x_n(n)$} (elbowInput1); % Input to signal1
+       \draw[->] (elbowInput1) -- (sum1); % Input to signal1
+       \draw[->] (sum1) -- node{$y_n(n)$} (output); % sum1 to output y[n]
+      %\draw[->] (yn) -- ++(2cm,0) node[right] {$y[n]$}; % Output y[n]
+       \draw[->] (differentiator1) -- (sum1); % Delay D1 to sum1
+       \draw[->] (gain1) -- (sum2); % Gain 1.2 to differentiator1
+       \draw[->] (differentiator2) -- (sum2); % Delay D2 to D1
+       \draw[->] (sum2) -- (differentiator1); % Delay D2 to D1
+       \draw[->] (gain2) -- (sum3); % Gain 0.13 to differentiator2
+       \draw[->] (differentiator3) -- (sum3); % Delay D3 to D2
+       \draw[->] (sum3) -- (differentiator2); % Delay D3 to D2
+       \draw[->] (gain3) |- (differentiator3); % Gain 0.36 to differentiator3
+       \draw[-] (c0) -- (elbowOutput1);
+       \draw[-] (elbowOutput1) -- (c1);
+       \draw[-] (c1) -- (c2);
+       \draw[-] (c2) -- (elbowOutput2);
+       \draw[-] (c1) -- (gain1);
+       \draw[-] (c2) -- (gain2);
+       \draw[-] (elbowOutput2) -- (gain3);
+
+      \end{tikzpicture}
+    \end{center}
+
 \end{enumerate}
 
 \end{document}
