Agrega legajos y actualiza fecha de entrega

--- a/tp3.tex
+++ b/tp3.tex
@@ -74,12 +74,12 @@
   \fontsize{20}{25}\selectfont Trabajo Practico 3
 }
 \author{
-Franco Palombo\\
-Ignacio Gil\\
-Laureano Valentin Reinoso\\
-Luciano Tomas Cortesini Perez\\
+Franco Palombo - 401910\\
+Ignacio Gil - 401891\\
+Laureano Valentin Reinoso - 402075\\
+Luciano Tomas Cortesini Perez - 402719\\
 }
-\date{19 / 08 / 2024}
+\date{07 / 10 / 2024}
 
 \begin{document}
 
