--- a/tp3.tex
+++ b/tp3.tex
@@ -99,7 +99,7 @@ tiempo continuo utilizado para la representación gráfica.
 \begin{enumerate}[label=\alph*), left=0pt]
 
   \item \fs{} Una señal analógica $x(t) = e^{-2t} \mu(t)$ se muestrea para generar la secuencia de tiempo discreto 
-    $x[n]$, considerar $n = nT_s$, con $T_s = 0.05$, $T_s = 0.01$, $T_s = 0.1$.
+    $x_{[n]}$, considerar $n = nT_s$, con $T_s = 0.05$, $T_s = 0.01$, $T_s = 0.1$.
 
     \begin{figure}[H]
       \centering
@@ -130,7 +130,7 @@ tiempo continuo utilizado para la representación gráfica.
 
 
   \item \fs{} Una señal analógica $x(t) = 10 \cos(2t) \mu(t)$ se muestrea para generar la secuencia de tiempo discreto
-    $x[n]$, con $T_s = 0.1$ y $T_s = 0.01$.
+    $x_{[n]}$, con $T_s = 0.1$ y $T_s = 0.01$.
 
     \begin{figure}[H]
       \centering
@@ -161,13 +161,13 @@ tiempo continuo utilizado para la representación gráfica.
     Para encontrar una función que pase por todos los puntos de la secuencia, como una forma de aproximar la señal en el
     dominio temporal de la cual se obtuvo la secuencia, utilizamos el método de interpolación de Lagrange. Definido por:
 
-    $$f(t)= \sum_{j=0}^n f[j] \prod_{i=0,i \neq j}^{n} \frac{t - t_i}{t_k - t_i}$$
+    $$f(t)= \sum_{j=0}^n f_{[j]} \prod_{i=0,i \neq j}^{n} \frac{t - t_i}{t_k - t_i}$$
     Donde:
 
     \centering
     \begin{minipage}{0.5\textwidth}
       $n$: número de elementos de la secuencia\\
-      $f[k]$: el elemento k-esimo de la secuencia\\
+      $f_{[k]}$: el elemento k-esimo de la secuencia\\
       $t_i$: el instante temporal del elemento i-esimo
     \end{minipage}
 
@@ -198,19 +198,19 @@ Considerar el siguiente sistema de tiempo discreto:
     % Definición de nodos
     \node at (0,-3) [coordinate] (input) {}; % Nodo de entrada x(n)
     \node [connector, right=2cm of input] (c1) {};
-    \node [block, right=1cm of c1, yshift=1.5cm] (h1) {$h_1[n]$};
-    \node [block, right=1cm of h1] (h2) {$h_2[n]$};
+    \node [block, right=1cm of c1, yshift=1.5cm] (h1) {$h_{1[n]}$};
+    \node [block, right=1cm of h1] (h2) {$h_2{_{[n]}}$};
     \node [sum, right=0.5cm of h2, yshift=-1.45cm] (sumador) {$\Sigma$}; % Nodo del sumador
-    \node [block, right=1cm of sumador] (h3) {$h_3[n]$}; % Bloque h3
+    \node [block, right=1cm of sumador] (h3) {$h_{3[n]}$}; % Bloque h3
     \node [coordinate, right=2cm of h3] (output) {}; % Nodo de salida y(n)
-    \node [block, below=1cm of c1, xshift=2.8cm] (h4) {$h_4[n]$}; % Nodo de h4, en paralelo
+    \node [block, below=1cm of c1, xshift=2.8cm] (h4) {$h_{4[n]}$}; % Nodo de h4, en paralelo
 
-    \draw[->] (input) -- node{$x[n]$}(c1);
+    \draw[->] (input) -- node{$x_{[n]}$}(c1);
     \draw[->] (c1) |- (h1);
     \draw[->] (h1) -- (h2);
     \draw[->] (h2) -| node [left, pos=0.9] {$+$} (sumador);
     \draw[->] (sumador) -- (h3);
-    \draw[->] (h3) -- node {$y[n]$} (output);
+    \draw[->] (h3) -- node {$y_{[n]}$} (output);
     \draw[->] (c1) |- (h4); % Conexión del input hacia h4
     \draw[->] (h4) -| node[pos=0.9] {$-$} (sumador); % Conexión desde h4 hacia el sumador con signo negativo
 
@@ -219,15 +219,15 @@ Considerar el siguiente sistema de tiempo discreto:
 
 \begin{enumerate}[label=\alph*), left=0pt]
 
-  \item\fs{} Si $h_1[n] = h_2[n] = 3^{-n}\mu[n]$, $h_3[n] = \mu[n]$, $h_4[n] = 2^{-n}\mu[n]$:
+  \item\fs{} Si $h_{1[n]} = h_{2[n]} = 3^{-n}\mu_{[n]}$, $h_{3[n]} = \mu_{[n]}$, $h_{4[n]} = 2^{-n}\mu_{[n]}$:
 
     La respuesta al impulso del sistema corresponde a:
     \begin{align*}
-      h[n]&=(h_1[n]*h_2[n] - h_4[n])*h_3[n]\\
-      h[n]&=(3^{-n}\mu[n]*3^{-n}\mu[n] - 2^{-n}\mu[n])*\mu[n]\\
-      h[n]&=(3^{-n}(n-1)\mu[n] - 2^{-n}\mu[n])*\mu[n] \\
-      h[n]&=3^{-n}n\mu[n]*\mu[n] - 3^{-n}\mu[n]*\mu[n] - 2^{-n}\mu[n]*\mu[n]\\
-      h[n]&=\sum_{k=0}^n 3^{-k}k - \sum_{k=0}^n 3^{-k} - \sum_{k=0}^n 2^{-k}
+      h_{[n]} &= (h_{1[n]}*h_{2[n]} - h_{4[n]})*h_{3[n]}\\
+      h_{[n]} &= (3^{-n}\mu_{[n]}*3^{-n}\mu_{[n]} - 2^{-n}\mu_{[n]})*\mu_{[n]}\\
+      h_{[n]} &= (3^{-n}(n-1)\mu_{[n]} - 2^{-n}\mu_{[n]})*\mu_{[n]} \\
+      h_{[n]} &= 3^{-n}n\mu_{[n]}*\mu_{[n]} - 3^{-n}\mu_{[n]}*\mu_{[n]} - 2^{-n}\mu_{[n]}*\mu_{[n]}\\
+      h_{[n]} &= \sum_{k=0}^n 3^{-k}k - \sum_{k=0}^n 3^{-k} - \sum_{k=0}^n 2^{-k}
     \end{align*}
 
     La serie geométrica:
@@ -249,26 +249,26 @@ Considerar el siguiente sistema de tiempo discreto:
     {
       \allowdisplaybreaks
       \begin{align*}
-        h[n] &= \left(\frac{\frac{1}{3}-(n+1)\left(\frac{1}{3}\right)^{n+1} + n\left(\frac{1}{3}\right)^{n+2}}{\left(1-\frac{1}{3}\right)^2} -
-          \frac{1-\left(\frac{1}{3}\right)^{n+1}}{1-\frac{1}{3}} - \frac{1-\left(\frac{1}{2}\right)^{n+1}}{1-\frac{1}{2}}\right) \mu[n]\\
+        h_{[n]} &= \left(\frac{\frac{1}{3}-(n+1)\left(\frac{1}{3}\right)^{n+1} + n\left(\frac{1}{3}\right)^{n+2}}{\left(1-\frac{1}{3}\right)^2} -
+        \frac{1-\left(\frac{1}{3}\right)^{n+1}}{1-\frac{1}{3}} - \frac{1-\left(\frac{1}{2}\right)^{n+1}}{1-\frac{1}{2}}\right) \mu_{[n]}\\
         %
-        h[n] &= \left(-\frac{11}{4}-\frac{9}{4}(n+1)\left(\frac{1}{3}\right)^{n+1} + \frac{9}{4}n\left(\frac{1}{3}\right)^{n+2} -
-        \frac{3}{2} \left(\frac{1}{3} \right)^{n+1} - 2 \left(\frac{1}{2}\right)^{n+1}\right) \mu[n] \\
+          h_{[n]} &= \left(-\frac{11}{4}-\frac{9}{4}(n+1)\left(\frac{1}{3}\right)^{n+1} + \frac{9}{4}n\left(\frac{1}{3}\right)^{n+2} -
+          \frac{3}{2} \left(\frac{1}{3} \right)^{n+1} - 2 \left(\frac{1}{2}\right)^{n+1}\right) \mu_{[n]} \\
         %
-        h[n] &= \left(-\frac{11}{4} -\frac{3}{4} n 3^{-n} - \frac{3}{4} 3^{-n} +
-          \frac{1}{4}n 3^{-n} - \frac{1}{2} 3^{-n} - 2^{-n}\right) \mu[n]\\
+            h_{[n]} &= \left(-\frac{11}{4} -\frac{3}{4} n 3^{-n} - \frac{3}{4} 3^{-n} +
+            \frac{1}{4}n 3^{-n} - \frac{1}{2} 3^{-n} - 2^{-n}\right) \mu_{[n]}\\
         %
-        h[n] &= \left(-\frac{11}{4} - 2^{-n} - \frac{2}{4} n 3^{-n} - \frac{5}{4} 3^{-n}\right) \mu[n]
+              h_{[n]} &= \left(-\frac{11}{4} - 2^{-n} - \frac{2}{4} n 3^{-n} - \frac{5}{4} 3^{-n}\right) \mu_{[n]}
       \end{align*}
     }
 
     La respuesta al escalón unitario está definida por:
     \begin{align*}
-      y[n] &= \mu[n] * h[n]\\[6pt]
+      y_{[n]} &= \mu_{[n]} * h_{[n]}\\[6pt]
       %
-      y[n] &= \sum_{k \in \mathbb{Z}} \left(-\frac{11}{4} - 2^{-n} - \frac{2}{4} n 3^{-n} - \frac{5}{4} 3^{-n}\right) \mu[k] \mu[n-k]\\
+      y_{[n]} &= \sum_{k \in \mathbb{Z}} \left(-\frac{11}{4} - 2^{-n} - \frac{2}{4} n 3^{-n} - \frac{5}{4} 3^{-n}\right) \mu_{[k]} \mu_{[n-k]}\\
       %
-      y[n] &= \mu[n] \sum_{k=0}^n \left(-\frac{11}{4} - 2^{-n} - \frac{2}{4} n 3^{-n} - \frac{5}{4} 3^{-n}\right)
+      y_{[n]} &= \mu_{[n]} \sum_{k=0}^n \left(-\frac{11}{4} - 2^{-n} - \frac{2}{4} n 3^{-n} - \frac{5}{4} 3^{-n}\right)
     \end{align*}
 
     % desarrollo pambi
@@ -287,7 +287,7 @@ Considerar el siguiente sistema de tiempo discreto:
     derivada (\ref{s.geometrica.deriv}), o la identidad de una sumatoria constante. Como resultado, se obtiene lo
     siguiente:
     \begin{equation*}
-      y[n] = \frac{5}{4} - \frac{11}{4} (n+1) + \frac{5n + 1}{8 \cdot 3^n} + \frac{3 (n+1)}{8 \cdot 3^n} -
+      y_{[n]} = \frac{5}{4} - \frac{11}{4} (n+1) + \frac{5n + 1}{8 \cdot 3^n} + \frac{3 (n+1)}{8 \cdot 3^n} -
         \frac{1}{2^n}
     \end{equation*}
 
@@ -300,19 +300,19 @@ Considerar el siguiente sistema de tiempo discreto:
       \end{minipage}
     \end{figure}
 
-  \item \fs{} Si $h_1[n] = 2^{-n} u[n]$, $h_2[n] = \delta[n]$, $h_3[n] = h_4[n] = 3^{-n} u[n]$:
+  \item \fs{} Si $h_{1[n]} = 2^{-n} u_{[n]}$, $h_{2[n]} = \delta_{[n]}$, $h_{3[n]} = h_{4[n]} = 3^{-n} u_{[n]}$:
 
     La respuesta al impulso del sistema corresponde a:
     {
       \allowdisplaybreaks
       \begin{align*}
-        h[n] &= (h_1[n] * h_2[n] - h_4[n]) * h_3[n]\\[6pt]
-        h[n] &= (2^{-n} \mu[n] * \delta[n] - 3^{-n} \mu[n]) * 3^{-n} \mu[n]\\[6pt]
-        h[n] &= (2^{-n} \mu[n] * 3^{-n} \mu[n] - 3^{-n} \mu[n] * 3^{-n} \mu[n])\\[6pt]
-        h[n] &= \sum_{k \in \mathbb{Z}} \left(2^{-k} \cdot 3^{-(n-k)} \right) \cdot \mu[k] \cdot \mu[n-k] - \sum_{k \in \mathbb{Z}} \left( 3^{-k}
-          \cdot 3^{-(n-k)} \right) \cdot \mu[k] \cdot \mu[n-k]\\
-        h[n] &= 3^{-n} \cdot \mu[n] \sum_{k = 0}^n \left(2^{-k} \cdot 3^k\right) - 3^{-n} \cdot \mu[n] \sum_{k=0}^n \left(3^{-k} \cdot 3^{k}\right)\\[6pt]
-        h[n] &= 3^{-n} \cdot \mu[n] \sum_{k = 0}^n \left(\frac{3}{2}\right)^{k} - 3^{-n} \cdot \mu[n] \sum_{k=0}^n 1
+        h_{[n]} &= (h_{1[n]} * h_{2[n]} - h_{4[n]}) * h_{3[n]}\\[6pt]
+        h_{[n]} &= (2^{-n} \mu_{[n]} * \delta_{[n]} - 3^{-n} \mu_{[n]}) * 3^{-n} \mu_{[n]}\\[6pt]
+        h_{[n]} &= (2^{-n} \mu_{[n]} * 3^{-n} \mu_{[n]} - 3^{-n} \mu_{[n]} * 3^{-n} \mu_{[n]})\\[6pt]
+        h_{[n]} &= \sum_{k \in \mathbb{Z}} \left(2^{-k} \cdot 3^{-(n-k)} \right) \cdot \mu_{[k]} \cdot \mu_{[n-k]} - \sum_{k \in \mathbb{Z}} \left( 3^{-k}
+        \cdot 3^{-(n-k)} \right) \cdot \mu_{[k]} \cdot \mu_{[n-k]}\\
+        h_{[n]} &= 3^{-n} \cdot \mu_{[n]} \sum_{k = 0}^n \left(2^{-k} \cdot 3^k\right) - 3^{-n} \cdot \mu_{[n]} \sum_{k=0}^n \left(3^{-k} \cdot 3^{k}\right)\\[6pt]
+        h_{[n]} &= 3^{-n} \cdot \mu_{[n]} \sum_{k = 0}^n \left(\frac{3}{2}\right)^{k} - 3^{-n} \cdot \mu_{[n]} \sum_{k=0}^n 1
       \end{align*}
     }
 
@@ -320,24 +320,24 @@ Considerar el siguiente sistema de tiempo discreto:
     resultado:
 
     \begin{align*}
-      h[n] &= -3^{-n} \left(2\left(1 - \left(\frac{3}{2}\right)^{n+1} \right) + (n+1)\right) \mu[n]\\[6pt]
-      h[n] &= \left(-2 \cdot 3^{-n} + 2 \cdot 3^{-n} \cdot \left(\frac{3}{2}\right)^{n+1} -
-        n \cdot 3^{-n} - 3^{-n}\right)\mu[n]
+      h_{[n]} &= -3^{-n} \left(2\left(1 - \left(\frac{3}{2}\right)^{n+1} \right) + (n+1)\right) \mu_{[n]}\\[6pt]
+      h_{[n]} &= \left(-2 \cdot 3^{-n} + 2 \cdot 3^{-n} \cdot \left(\frac{3}{2}\right)^{n+1} -
+      n \cdot 3^{-n} - 3^{-n}\right)\mu_{[n]}
     \end{align*}
 
     La respuesta al escalón unitario está definida por:
     \begin{align*}
-      y[n] &= \mu[n] * h[n]\\[6pt]
-      y[n] &= \sum_{k \in \mathbb{Z}} \left(-2 \cdot 3^{-k} + 2 \cdot 3^{-k} \cdot \left(\frac{3}{2}\right)^{k+1} -
-        k \cdot 3^{-k} - 3^{-k}\right)\mu[k] \cdot \mu[n-k]\\[6pt]
-      y[n] &= \mu[n] \sum_{k=0}^n \left(-2 \cdot 3^{-k} + 2 \cdot 3^{-k} \cdot \left(\frac{3}{2}\right)^{k+1} -
+      y_{[n]} &= \mu_{[n]} * h_{[n]}\\[6pt]
+      y_{[n]} &= \sum_{k \in \mathbb{Z}} \left(-2 \cdot 3^{-k} + 2 \cdot 3^{-k} \cdot \left(\frac{3}{2}\right)^{k+1} -
+      k \cdot 3^{-k} - 3^{-k}\right)\mu_{[k]} \cdot \mu_{[n-k]}\\[6pt]
+        y_{[n]} &= \mu_{[n]} \sum_{k=0}^n \left(-2 \cdot 3^{-k} + 2 \cdot 3^{-k} \cdot \left(\frac{3}{2}\right)^{k+1} -
         k \cdot 3^{-k} - 3^{-k}\right)
     \end{align*}
 
     Nuevamente, aplicando las identidades de la serie geométrica (\ref{s.geometrica}), su derivada (\ref{s.geometrica.deriv})
     y la serie de una constante, se obtiene que:
     \begin{equation*}
-      y[n] = \left(-9 \frac{1-\left(\frac{1}{3}\right)^{n+1}}{2} + 6 \left(1 - \left(\frac{1}{2}\right)^{n+1}\right) -
+      y_{[n]} = \left(-9 \frac{1-\left(\frac{1}{3}\right)^{n+1}}{2} + 6 \left(1 - \left(\frac{1}{2}\right)^{n+1}\right) -
         \left(\frac{\frac{1}{3} - n\left(\frac{1}{3}\right)^{n} + (n-1) \left(\frac{1}{3}\right)^{n+1}}{\left(1-\frac{1}{3}\right)^{2}}+3^{-n}\cdot n\right)\right)
     \end{equation*}
 
@@ -374,7 +374,7 @@ inmediatamente después del depósito en el periodo.
         \node [coordinate, right=2cm of sistema] (output) {}; % Nodo de salida y(n)
 
         \draw[->] (input) -- node{$x_{[n]}$}(sistema);
-        \draw[->] (sistema) -- node {$y_{[n]}$} (output);
+        \draw{[->]} (sistema) -- node {$y_{[n]}$} (output);
 
         \end{tikzpicture}
     \end{figure}
